--- a/css/styles.css
+++ b/css/styles.css
@@ -12,31 +12,37 @@ font-family: "Raleway", sans-serif;
 }
 
 
-.logo-title {
-    color: NAVY-BLUE, #2E2F42;
-    font-family: Raleway,sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    
-    
-}
 
 
 .logo-link {
-    color: IRIS, #4D5AE5;
-    font-family: Raleway,sans-serif;
+    color: #4d5ae5;
+    font-family: Raleway, sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
 }
 
+.logo-title {
+    color: #2e2f42;
+    line-height: 1.17;
+
+}
+
+.menu-link:hover {
+    color: #404BBF;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
 .menu-link {
-    color: NAVY-BLUE, #2E2F42;
+    color:#2E2F42;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
