--- a/css/styles.css
+++ b/css/styles.css
@@ -116,8 +116,8 @@ font-family: "Raleway", sans-serif;
 
 .main-button {
 
-    background: IRIS, #4D5AE5;
-    color: WHITE, #FFF;
+    
+    color: #FFF;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -125,6 +125,15 @@ font-family: "Raleway", sans-serif;
     line-height: 1.5;
     letter-spacing: 0.04em;
 }
+
+.main-button {
+    border-radius: 4px;
+    background: #4D5AE5;
+   
+}
+        
+
+
 
  button {
       cursor: pointer;
