--- a/css/styles.css
+++ b/css/styles.css
@@ -151,14 +151,24 @@ font-family: "Raleway", sans-serif;
 
 
 .menu-advantages-item {
-    color: NAVY-BLUE, #2E2F42;
-    font-family: Roboto;
+    color: #2E2F42;
+    font-family: Roboto,sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.06;
    
+}
+
+.text-menu-advantages{
+    color: #434455;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .menu-link, .menu-contact-link, .logo-link {
