--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ font-family: "Raleway", sans-serif;
 }
 
 .team-list {
-background: CLOUD, #F4F4FD;
+background: #F4F4FD;
 flex-shrink: 0;
 }
 
@@ -203,14 +203,20 @@ flex-shrink: 0;
     letter-spacing:0.02em;
 }
 
+.job-title-top{
+    background:  #FFF;
+       
+}
+
 .team-list-item {
-    color: NAVY-BLUE, #2E2F42;
+    color: #2E2F42;
+    text-align: center;
     font-family: Roboto;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
     line-height: 1.11;
-    letter-spacing: 0.02em;
+    letter-spacing:0.02em;
     text-transform: capitalize;
 }
 
