--- a/css/styles.css
+++ b/css/styles.css
@@ -234,8 +234,13 @@ flex-shrink: 0;
 
 
 .presents-cards-text {
-    border: 1px solid CORNFLOWER, #E7E9FC;
-    background: #FFF;
+    color: #2E2F42;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 
 .secondary-text {
