--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,17 @@ flex-shrink: 0;
 }
 
 .last.page {
-    background-color:#2E2F42;
+
+  background: #2E2F42;
 }
 
-.
+.last-page-text{
+    color:  #F4F4FD;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
