--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ font-family: "Raleway", sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 1.2;
-    letter-spacing: 0.06;
+    letter-spacing: 0.02em;
    
 }
 
@@ -208,7 +208,7 @@ flex-shrink: 0;
 }
 
 .team-list-item {
-    color: #2E2F42;
+    color:#2E2F42;
     text-align: center;
     font-family: Roboto;
     font-size: 36px;
@@ -285,13 +285,12 @@ flex-shrink: 0;
     letter-spacing: 0.02em;
 }
 
-.last.page {
-
-  background: #2E2F42;
+.last-page{
+background:  #2E2F42;
 }
 
 .last-page-text{
-    color:  #F4F4FD;
+    color:#F4F4FD;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -299,4 +298,3 @@ flex-shrink: 0;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-
