--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ font-family: "Raleway", sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 1.2;
-    letter-spacing: 0.02em;
+    letter-spacing:0.02em;
    
 }
 
@@ -297,4 +297,15 @@ background:  #2E2F42;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+
+.logo-title-fin{
+    color:#F4F4FD;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.16;
+    letter-spacing: 0.03;
+    text-transform: uppercase;
 }
