--- a/css/styles.css
+++ b/css/styles.css
@@ -36,42 +36,48 @@ img{
     font-family: "Raleway", sans-serif;
     display: flex;
     box-sizing: border-box;
-    column-gap: 40px;
+    gap: 40px;
 }
 
 
-.head-page-container{
+
+.menu-contact {
+    color: #434455;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    gap: 40px;
+    display: flex;
+}
+
+
+.head-navigation {
     display: flex;
     align-items: center;
-    width: 1158px;
 }
 
-
-.menu-contact{
-    display: flex;
-    column-gap: 40px;
-}
 
 
 .head-page-container {
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 156px;
-    padding-right: 156px;
     padding-top: 24px;
     padding-bottom: 24px;
     justify-content: space-between;
-    width: 1440px;
     align-items: center;
+    width: 1158px;
 
 }
 
-
-.conteiner{
+.conteiner {
     width: 1158px;
     padding: 0 15px 0 15px;
-}
+} 
+
 
 .head-page{
  display: flex;
@@ -150,15 +156,6 @@ img{
     list-style-type: none;
 }
 
-.menu-contact {
-    color:#434455;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
 
 .menu-contact-link{
     color: #434455;
@@ -518,7 +515,3 @@ flex-shrink: 0;
     
 }
 
-.head-navigation{
-    display: flex;
-    align-items: center;
-}
