--- a/css/styles.css
+++ b/css/styles.css
@@ -184,9 +184,6 @@ img{
    width: 1440px;
     height: 600px;
     padding-bottom: 60px;
-  
-   
-   
 
 }
 
@@ -208,25 +205,7 @@ img{
 }
 
 
- 
 
-.main-button {
-
-    color: #FFF;
-    font-family: Roboto,sans-serif;
-    font-size: 16px;
-    width: 169px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    padding: 16px 32px 16px 32px;
-    margin: 48px 635px 188px 636px;
-    min-width: 169px;
-    height: 56px;
-    display: block;
-    border: none;
-    border-radius: 4px;
 
     /* padding-bottom: 16px;
         padding-left: 32px;
@@ -238,18 +217,27 @@ img{
         align-items: flex-start;
         column-gap: 10px; */
        
- 
-
-    
    
-   
-}
 
 .main-button {
-    
+
+    color: #FFF;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     background: #4D5AE5;
-   
+    margin: 48px 635px 188px 636px;
+    min-width: 169px;
+    height: 56px;
+    display: block;
+    border: none;
+    border-radius: 4px;
+
 }
+
 
 .main-button:hover,
 .main-button:focus{
@@ -258,8 +246,6 @@ img{
    
 }
         
-
-
 
  button {
       cursor: pointer;
@@ -277,7 +263,6 @@ img{
 
  }
 
-   
 
 
 .menu-advantages-item {
@@ -517,3 +502,6 @@ flex-shrink: 0;
     
 }
 
+.menu-contact-item{
+    
+}
