--- a/css/styles.css
+++ b/css/styles.css
@@ -183,10 +183,18 @@ img{
     background:  #2E2F42;
    width: 1440px;
     height: 600px;
-    padding-bottom: 60px;
+    
+    
 
 }
 
+.main-page-conteiner{
+padding-top: 188px;
+padding-bottom: 188px;
+    
+
+
+}
 
 .main-text {
     color: #FFF;
@@ -197,10 +205,10 @@ img{
     font-weight: 700;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    width: 496px;
+    max-width: 496px;
     margin-bottom: 48px;
     margin-left: 472px;
-    padding-top: 188px;
+    
   
 }
 
@@ -338,11 +346,6 @@ flex-shrink: 0;
     justify-content: center;
     align-items: center;
     
-
-
-   
-   
-
        
 }
 
@@ -410,24 +413,13 @@ flex-shrink: 0;
         width: 1128px;
     
      
-    
-}
-.examples{
-   
-    
-    
-   
-    }
 
-
-
-.presents-cards-item {
+ .presents-cards-item {
     width: 360px;
   
 
 
 }
-    
 
 
 .secondary-text {
