--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ img{
     padding-bottom: 24px;
     justify-content: space-between;
     align-items: center;
-    width: 1158px;
+    width: 1128px;
 
 }
 
@@ -86,6 +86,8 @@ img{
 
    
 }
+
+
 
 
 .logo-link {
@@ -260,8 +262,10 @@ padding-bottom: 188px;
   }
 
 
-  .advantages-container{
+  .advantages .container{
     padding: 120px 0 120px;
+    width: 1440px;
+
 
   }
 
@@ -292,7 +296,7 @@ padding-bottom: 188px;
 
 
 .menu-advantages{
-    width: 264px;
+    width: calc((100%-72px)/4)
     
 }
 
