--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ p{
 }
 
 
-ul;
+ul,
 ol{
     margin-top: 0;
     margin-bottom: 0;
@@ -37,6 +37,7 @@ img{
     display: flex;
     box-sizing: border-box;
     gap: 40px;
+    padding-left: 0;
 }
 
 
@@ -49,7 +50,7 @@ img{
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    gap: 40px;
+    column-gap: 40px;
     display: flex;
     align-items:center;
     text-align: center;
@@ -66,8 +67,8 @@ img{
 
 .head-page-container {
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
+ /* margin-left: auto;
+    margin-right: auto; */
     padding-top: 24px;
     padding-bottom: 24px;
     justify-content: space-between;
@@ -75,13 +76,15 @@ img{
     width: 1158px;
     padding-right: 15px;
     padding-left: 15px;
+    margin-left: 156px;
+    margin-right: 156px;
 
 }
 
-.container {
+/* .container {
     width: 1158px;
-    padding: 0 15px 0 15px;
-} 
+
+} */
 
 
 .head-page{
