--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,8 @@ img{
     box-sizing: border-box;
     gap: 40px;
     padding-left: 0;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 
@@ -61,7 +63,7 @@ img{
     display: flex;
     align-items: center;
     width: 1128px;
-}
+} 
 
 
 
@@ -69,8 +71,7 @@ img{
     display: flex;
  /* margin-left: auto;
     margin-right: auto; */
-    padding-top: 24px;
-    padding-bottom: 24px;
+    
     justify-content: space-between;
     align-items: center;
     width: 1158px;
@@ -81,10 +82,14 @@ img{
 
 }
 
-/* .container {
-    width: 1158px;
+.container {
+ width: 1158px;
+ margin: 0 auto;
+ padding: 0 15px 0 15px;
 
-} */
+}
+
+
 
 
 .head-page{
@@ -278,6 +283,7 @@ width: 1158px;
     padding: 120px 15px 120px 15px;
     width: 1158px; 
     align-items: center;
+   
   }
 
  .top-advantages{
