--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ img{
  width: 1158px;
  margin: 0 auto;
  padding: 0 15px 0 15px;
+ 
 
 }
 
@@ -333,9 +334,21 @@ align-items: center;
     text-decoration: none;
 }
 
-.team-list {
+
+.team-list{
 background: #F4F4FD;
-flex-shrink: 0;
+width: 1440px;
+padding: 120px 0 120px;
+justify-content: space-between;
+
+}
+
+
+.team-list-container {
+ width: 1158px;
+ 
+ 
+ 
 }
 
 .team-names {
@@ -347,6 +360,7 @@ flex-shrink: 0;
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-top: 32px;
+    margin-bottom: 8px;
 }
 
 
@@ -358,7 +372,6 @@ flex-shrink: 0;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing:0.02em;
-   margin-top: 8px;
    margin-bottom: 32px;
    
 
@@ -368,7 +381,7 @@ flex-shrink: 0;
     background:  #FFF;
     margin-bottom: 120px;
     display: flex;
-    width: 264px;
+    max-width:264px ;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -392,11 +405,11 @@ flex-shrink: 0;
 
 
 .team-cards{
-    display: flex;
+    display:flex ;
     column-gap: 24px;
     margin-left: 156px ;
     margin-right: 156px;
-    width: 264px;
+   
   
     
 }
