--- a/css/styles.css
+++ b/css/styles.css
@@ -456,9 +456,10 @@ align-items: center;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px
 }
 
-/* .presents-cards {
+.presents-cards {
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
@@ -468,16 +469,22 @@ align-items: center;
     margin-bottom: 120px;
     width: 1128px;
 
-} */
+} 
 
 
  .presents-cards-item {
-    width: 360px;
+   width: calc((100% - 48px) / 3);  
   
 
 
 }
 
+
+.category{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 
 .secondary-text {
     color: SLATE, #434455;
