--- a/css/styles.css
+++ b/css/styles.css
@@ -38,11 +38,13 @@ img{
     box-sizing: border-box;
     gap: 40px;
     padding-left: 0;
-    padding-top: 24px;
-    padding-bottom: 24px;
+  
 }
 
-
+.menu-item{
+padding-top: 24px;
+padding-bottom: 24px;
+}
 
 .menu-contact {
     color: #434455;
@@ -52,7 +54,7 @@ img{
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    column-gap: 40px;
+    gap: 40px;
     display: flex;
     align-items:center;
    
