--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ img{
 .head-navigation-container {
  display: flex;
   align-items: center;
-    width: 1128px;
+    
     
 
 } 
@@ -83,9 +83,9 @@ img{
     width: 1158px;
     padding-right: 15px;
     padding-left: 15px;
-    margin-left: 156px;
-    margin-right: 156px;
-
+    /* margin-left: 156px; 
+    margin-right: 156px;*/
+    
 }
 
 .container {
@@ -100,8 +100,7 @@ img{
 
 
 .head-page{
- display: flex;
- width: 1440px;
+ 
  border-bottom: 1px solid #e7e9fc
 
    
@@ -204,8 +203,6 @@ img{
 
 .main-page{
     background:  #2E2F42;
-   width: 1440px;
-    height: 600px;
     padding-top: 188px;
     padding-bottom: 188px;
     
@@ -236,7 +233,8 @@ align-items: center;
     letter-spacing: 0.02em;
     max-width: 496px;
     margin-bottom: 48px;
-    margin-left: 472px;
+    margin-left: auto;
+    margin-right: auto;
     
   
 }
@@ -254,12 +252,14 @@ align-items: center;
     line-height: 1.5;
     letter-spacing: 0.04em;
     background: #4D5AE5;
-    margin: 48px 635px 0 636px;
+    margin-top: 48px;
     min-width: 169px;
     height: 56px;
     display: block;
     border: none;
     border-radius: 4px;
+    margin-right: auto;
+    margin-left: auto;
 
 }
 
@@ -290,13 +290,12 @@ align-items: center;
     padding: 0 15px 0 15px;
     width: 1158px; 
     align-items: center;
-    margin-left: 156px;
+   
        
   }
 
  .top-advantages{
     display: flex;
-   padding-top: 60px;
    gap: 24px;
    margin: auto;
    /* margin-left: 156px;
@@ -322,7 +321,7 @@ align-items: center;
 
 
 .menu-advantages{
-    width: calc((100%-72px)/4)
+    width: calc((100% - 72px)/4)
     
 }
 
@@ -343,7 +342,6 @@ align-items: center;
 
 .team-list{
  background: #F4F4FD;
- width: 1440px;
  padding-top: 120px;
  padding-bottom: 120px;
 
@@ -380,7 +378,6 @@ align-items: center;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing:0.02em;
-   margin-bottom: 32px;
     text-align: center;
    
 
@@ -388,8 +385,6 @@ align-items: center;
 
 .job-title-top{
     background:  #FFF;
-    margin-bottom: 120px;
-    display: flex;
     width: calc((100% - 72px) / 4);
     flex-direction: column;
     justify-content: center;
@@ -414,7 +409,6 @@ align-items: center;
     line-height: 1.11;
     letter-spacing:0.02em;
     text-transform: capitalize;
-    padding-top: 120px;
     margin-bottom: 72px;
 }
 
@@ -438,11 +432,9 @@ align-items: center;
     line-height: 1.11;
     letter-spacing: 0.02;
     text-align: center; 
-    margin-top: 120px;
-    margin-bottom: 72px;
-    display: inline-block;
     justify-content: center;
-    margin-left: 611px;
+    margin-bottom: 72px;
+ 
 }
 
 
@@ -462,10 +454,7 @@ align-items: center;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    margin-left: 156px;
-    margin-right: 156px;
-    margin-bottom: 120px;
-    width: 1128px;
+   
 
 } 
 
@@ -483,7 +472,6 @@ padding: 120px 0 120px 0;
 
 
 .examples-container{
-display: inline-block;
 justify-content: center;
 }
 
@@ -582,4 +570,5 @@ justify-content: center;
 .logotype{
 display: inline-block;
 margin-bottom: 16px;
+text-decoration: none;
 }
